<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="app_name2">Playlist maker</string>
    <string name="title_hello">Привет, Практикум</string>
    <string name="title_search">Поиск</string>
    <string name="title_media_library">Медиатека</string>
    <string name="title_settings">Настройки</string>
    <string name="title_dark_theme">Тёмная тема</string>
    <string name="title_share_app">Поделиться приложением</string>
    <string name="title_write_support">Написать в поддержку</string>
    <string name="title_user_agreement">Пользовательское соглашение</string>
    <string name="user_agreement_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="letterSubject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="myMail">boris.sulyagin2018@yandex.ru</string>
    <string name="prakticum_link">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="input_hint">Поиск</string>
    <string name="nothingFound">Ничего не нашлось</string>
    <string name="communicationProblems">Проблемы со связью</string>
    <string name="downloadFailed">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>

    <string name="track_time">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="play">Проиграть</string>
    <string name="add_to_favorites">Добавить в избранное</string>
    <string name="playing_time">00:30</string>
    <string name="album_icon">Обложка альбома</string>
    <string name="None">None</string>
    <string name="No_name_artist">No name artist</string>
    <string name="Janre">Жанр</string>
    <string name="Long">Жанр</string>

</resources>