<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/arrow_back"
        app:title="@string/title_settings"
        app:navigationIconTint="?attr/colorOnSecondary">
    </com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/indentation_from_the_edges_of_the_screen">

        <Switch
            style="@style/SettingsTextStyle"
            android:text="@string/title_dark_theme"
            android:layout_gravity="end"
            android:layout_marginTop="24dp">
        </Switch>

        <TextView
            android:id="@+id/shareApp"
            style="@style/SettingsTextStyle"
            android:drawableEnd="@drawable/share"
            android:text="@string/title_share_app"/>

        <TextView
            android:id="@+id/support"
            style="@style/SettingsTextStyle"
            android:drawableEnd="@drawable/support"
            android:text="@string/title_write_support">
        </TextView>

        <TextView
            android:id="@+id/userAgreement"
            style="@style/SettingsTextStyle"
            android:drawableEnd="@drawable/arrow_forward"
            android:text="@string/title_user_agreement">
        </TextView>

    </LinearLayout>

</LinearLayout>

