<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/indentation_from_the_edges_of_the_screen">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/title_text_size" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/indentation_from_the_edges_of_the_screen">

        <Button
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:foreground="?attr/selectableItemBackground"
            android:backgroundTint="@color/white"
            android:text="@string/title_serch"
            android:textColor="@color/black"
            android:textSize="@dimen/title_text_size"
            app:cornerRadius="16dp"
            app:icon="@drawable/ic_vector"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/label_indentation_from_the_text"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/media_library"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:foreground="?attr/selectableItemBackground"
            android:backgroundTint="@color/white"
            android:text="@string/title_media_library"
            android:textColor="@color/black"
            android:textSize="@dimen/title_text_size"
            app:cornerRadius="16dp"
            app:icon="@drawable/media_library"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/label_indentation_from_the_text"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="12dp"
            android:layout_weight="1"
            android:foreground="?attr/selectableItemBackground"
            android:backgroundTint="@color/white"
            android:text="@string/title_settings"
            android:textColor="@color/black"
            android:textSize="@dimen/title_text_size"
            app:cornerRadius="16dp"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/label_indentation_from_the_text"
            app:iconTint="@color/black" />


    </LinearLayout>


</LinearLayout>