<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/Indent_16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/Indent_16dp" />

    <ImageView
        android:id="@+id/backButton"
        style="@style/HeadStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/Indent_16dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/cover"
        style="@style/AudioPlayerImage"
        android:layout_width="@dimen/Indent_0dp"
        android:layout_height="@dimen/Indent_0dp"
        android:layout_marginStart="@dimen/Indent_16dp"
        android:layout_marginTop="@dimen/Indent_42dp"
        android:layout_marginEnd="@dimen/Indent_16dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@id/title"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        app:srcCompat="@drawable/placeholder" />

    <TextView
        android:id="@+id/title"
        style="@style/AudioPlayerTrackName"
        android:layout_width="@dimen/Indent_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/Indent_24dp"
        android:layout_marginHorizontal="@dimen/Indent_8dp"
        android:text="@string/None"
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/cover" />

    <TextView
        android:id="@+id/artist"
        style="@style/AudioPlayerArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_size_12sp"
        android:layout_marginHorizontal="@dimen/Indent_8dp"
        android:text="@string/No_name_artist"
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <ImageButton
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/Indent_24dp"
        android:background="@null"
        android:src="@drawable/playlist"
        android:text="View13"
        app:layout_constraintBottom_toBottomOf="@+id/playButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/playButton"
        app:layout_constraintVertical_bias="0.515" />

    <ImageButton
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/Indent_38dp"
        android:background="@null"
        android:src="@drawable/play"
        app:layout_constraintBottom_toTopOf="@id/progressTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artist" />

    <TextView
        android:id="@+id/progressTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/Indent_12dp"
        android:text="Long"
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintBottom_toTopOf="@id/durationTextView"
        app:layout_constraintEnd_toEndOf="@id/playButton"
        app:layout_constraintStart_toStartOf="@id/playButton"
        app:layout_constraintTop_toBottomOf="@id/playButton" />

    <ImageButton
        android:id="@+id/likeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/Indent_24dp"
        android:background="@null"
        android:src="@drawable/favorites"
        app:layout_constraintBottom_toBottomOf="@+id/addButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/addButton" />

    <TextView
        android:id="@+id/durationTextView"
        style="@style/AudioPlayerContentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/Indent_30dp"
        android:layout_marginBottom="@dimen/Indent_16dp"
        android:text="@string/track_time"
        app:layout_constraintBottom_toTopOf="@+id/albumTextView"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTag="durationTag"
        app:layout_constraintTop_toBottomOf="@id/progressTime" />

    <TextView
        android:id="@+id/albumTextView"
        style="@style/AudioPlayerContentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/Indent_16dp"
        android:text="@string/album"
        app:layout_constraintBottom_toTopOf="@+id/yearTextView"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTag="albumNameTag"
        app:layout_constraintTop_toBottomOf="@id/durationTextView" />

    <TextView
        android:id="@+id/yearTextView"
        style="@style/AudioPlayerContentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/Indent_16dp"
        android:text="@string/year"
        app:layout_constraintBottom_toTopOf="@+id/styleTextView"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTag="yearTag"
        app:layout_constraintTop_toBottomOf="@id/albumTextView" />

    <TextView
        android:id="@+id/styleTextView"
        style="@style/AudioPlayerContentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/Indent_16dp"
        android:text="@string/Janre"
        app:layout_constraintBottom_toTopOf="@+id/countryTextView"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTag="styleNameTag"
        app:layout_constraintTop_toBottomOf="@id/yearTextView" />

    <TextView
        android:id="@+id/countryTextView"
        style="@style/AudioPlayerContentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/Indent_20dp"
        android:text="@string/country"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTag="countryNameTag"
        app:layout_constraintTop_toBottomOf="@id/styleTextView" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/textsBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_tags="durationTag, styleNameTag, countryNameTag, yearTag, albumNameTag" />


    <TextView
        android:id="@+id/trackTime"
        style="@style/AudioPlayerContentText"
        android:layout_width="@dimen/Indent_0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/track_time"
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintBaseline_toBaselineOf="@id/durationTextView"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/textsBarrier" />

    <TextView
        android:id="@+id/albumName"
        style="@style/AudioPlayerContentText"
        android:layout_width="@dimen/Indent_0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/None"
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintBaseline_toBaselineOf="@id/albumTextView"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/textsBarrier" />

    <TextView
        android:id="@+id/year"
        style="@style/AudioPlayerContentText"
        android:layout_width="@dimen/Indent_0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/None"
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintBaseline_toBaselineOf="@id/yearTextView"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/textsBarrier" />

    <TextView
        android:id="@+id/styleName"
        style="@style/AudioPlayerContentText"
        android:layout_width="@dimen/Indent_0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/None"
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintBaseline_toBaselineOf="@id/styleTextView"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/textsBarrier" />

    <TextView
        android:id="@+id/countryName"
        style="@style/AudioPlayerContentText"
        android:layout_width="@dimen/Indent_0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/None"
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintBaseline_toBaselineOf="@id/countryTextView"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/textsBarrier" />


</androidx.constraintlayout.widget.ConstraintLayout>

